HasSourceSet recipe (convenient for dynamic applicable tests) / fixes #2555